--- a/lsh/Makefile
+++ b/lsh/Makefile
@@ -1,7 +1,30 @@
-.PHONY: lsh
-lsh: bin/lsh
-	@./bin/lsh
+CC=gcc
+CFLAGS=-I./include -DLSH_USE_STD_GETLINE
 
-bin/lsh: main.c
-	@mkdir -p bin
-	@$(CC) -DLSH_USE_STD_GETLINE main.c -o bin/lsh
+SRC=src
+INC=include
+BIN=bin
+OBJ=obj
+
+SOURCES=$(wildcard $(SRC)/*.c)
+OBJECTS=$(patsubst $(SRC)/%.c,$(OBJ)/%.o,$(SOURCES))
+HEADERS=$(wildcard $(INC)/*.h)
+
+$(BIN)/lsh: $(OBJECTS) | $(BIN)
+	$(CC) $(CFLAGS) -o $@ $^
+
+$(OBJ)/%.o: $(SRC)/%.c $(HEADERS) | $(OBJ)
+	$(CC) $(CFLAGS) -c $< -o $@
+
+$(BIN) $(OBJ):
+	mkdir -p $@
+
+.PHONY: build run clean
+
+clean:
+	rm -rf $(OBJ) $(BIN)
+
+build: $(BIN)/lsh
+
+run: build
+	$(BIN)/lsh
